# missing-semester

./: README.md
.github/actions/: action.yml
.github/workflows/: learn-github-actions.yml  workflow-with-actions.yml
1_algebra/: README
algorithms/: main.md
algorithms and data structures/Popular problems/NSum/: 3sum.py
algorithms and data structures/Popular problems/subarray/: consecutive-characters.py  longest-subarray-of-1s-after-deleting-one-element.py  max-consecutive-ones.py
algorithms and data structures/sorting/golang/: binary_search.go
algorithms/python/: insertion_sort.py
architecture/Docker/: 2_images.md  3_builder_commands.md  4-files.md  4-files.sh  4_files.md
architecture/Kubernetes/: README.md
architecture/Kubernetes/lesson1.2/: Dockerfile
architecture/LLMs/: embeddings.md  metrics.md
books/HOSE with golang/: Chapter1.md  Chapter2.md  README.md
machine learning/: random-questions.md
python/: singolton.py
security/1_Security for Hackers and Developers: Overview/: lecture_notes.md
sql/postgreSQL/: Basics.md
sql/simulator-sql/: l1_select_from_order_by_limit_cast_coalesce_concat_case.md  l2_where_in_between_is_null_case.md  l3.md  l3_distinct_count_array_lenght_age_filter.md  l4_group_by_having.md  l5_subquaries.md  p1.sql  p2.sql  p3.sql  p4.sql  p5.sql
sql/simulator-sql/1/: l1.md
web/JavaScript/: logical.js
web/django/polls/: docker-compose.yaml  pyproject.toml
web/django/polls/poll/: urls.py
web/django/polls/polls/: settings.py  urls.py
web/frontend/: Questions.md
workflow/scripts/: create_output.sh
(+31 files in other folders)
